--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Page Title</title>
     <!-- CSS only -->
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -66,12 +66,8 @@
                         Phone:8786758788
                     </div>
                 </div>
-
-
-                <img style="width:62px; height:62px" class="border rounded-circle" crossorigin="anonymous" />
-
-
-
+                <img style="width:62px; height:62px" class="border rounded-circle heimg" crossorigin="anonymous" />
+            
             </div>
 
         </div>
