--- a/index.html
+++ b/index.html
@@ -1889,10 +1889,10 @@
                         <div class="d-flex  sectionHeader justify-content-between align-items-center  ">
                             <div class="d-flex align-items-center   u-color-color-charcoal ">
                                 <img src="/full-report-icons/grocery-b.svg" width="45px" height="45px" />
-                                <div class=" smain-text">Groceries</div>
+                                <div class="fr smain-text">Groceries</div>
                             </div>
 
-                            <div class="subtext">
+                            <div class=" frs subtext">
                                 4 more
                             </div>
 
@@ -1902,19 +1902,19 @@
                         <div class="d-flex mt-3 flex-wrap">
 
                             <div class="col-6 m-0  p-0">
-                                <div class="d-flex">
+                                <div class="d-flex resed">
                                     <div>
-                                        <div class='pdfHeight p-2 border-right-gc resed'>
+                                        <div class='pdfHeight p-2 border-right-gc '>
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class=" frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
                                                 <div></div>
 
-                                                <div class="d-flex flex-column align-items-center res">
+                                                <div class=" frsf d-flex flex-column align-items-center res">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="text-f-4 text-nowrap">
@@ -1922,7 +1922,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class=" frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -1931,7 +1931,7 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class="frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
@@ -1940,12 +1940,12 @@
                                                 <div class="d-flex flex-column align-items-center">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -1958,7 +1958,7 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <div class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <div class="frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </div>
 
@@ -1967,12 +1967,12 @@
                                                 <div class="d-flex flex-column align-items-center">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class="frfs text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -1981,7 +1981,7 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class="frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
@@ -1990,12 +1990,12 @@
                                                 <div class="d-flex flex-column align-items-center">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -2015,19 +2015,19 @@
                         <div class="d-flex  sectionHeader justify-content-between align-items-center  ">
                             <div class="d-flex align-items-center   color-charcoal ">
                                 <img src="/full-report-icons/bar-b.svg" width="40px" height="40px" />
-                                <div class=" smain-text">
+                                <div class="fr smain-text">
                                     Restaurant, Bars and Cafe
                                 </div>
                             </div>
 
-                            <div class="subtext">
+                            <div class="frs subtext">
 
                                 47 more
                             </div>
 
                         </div>
 
-                        <div class="d-flex mt-3 flex-wrap">
+                        <div class="d-flex mt-3 flex-wrap resed">
 
                             <div >
                                 <div class="d-flex resed">
@@ -2036,21 +2036,21 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class=" frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
                                                 
 
                                                 <div class="d-flex flex-column align-items-center res">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img src='full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class=" frsf text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class=" frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -2060,7 +2060,7 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class=" frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
@@ -2069,12 +2069,12 @@
                                                 <div class="d-flex flex-column align-items-center">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class=" frsf text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -2087,7 +2087,7 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class="frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
@@ -2096,12 +2096,12 @@
                                                 <div class="d-flex flex-column align-items-center">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
-                                                    <div class="text-f-4 text-nowrap">
+                                                    <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
 
@@ -2110,13 +2110,13 @@
 
                                             <div class="d-flex  justify-content-between align-items-center ">
 
-                                                <Badge class="rounded color-75 p-1 gtext-f-4 font-weight-400">
+                                                <Badge class="frf rounded color-75 p-1 gtext-f-4 font-weight-400">
                                                     Farm Boy
                                                 </Badge>
 
                                                 <div></div>
 
-                                                <div class="d-flex flex-column align-items-center ">
+                                                <div class="frsf d-flex flex-column align-items-center ">
                                                     <img src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="text-f-4 text-nowrap">
@@ -2124,7 +2124,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="text-f-6 color-75  text-truncate-2 font-weight-400">
+                                            <div class="frsft text-f-6 color-75  text-truncate-2 font-weight-400">
                                                 3rd tek Road
                                             </div>
                                             <div class="d-flex flex-wrap align-items-center ">
@@ -2145,7 +2145,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="text-f-4 color-charcoal-light-25 ">
+                                                <div class="stf text-f-4 color-charcoal-light-25 ">
                                                     128 Google reviews
                                                 </div>
                                             </div>
