--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div style="width:100%; height:100%">
         <!--header-->
         <div class="justify-content-between align-items-center "
-            style="margin-left:30px;margin-right: 30px; margin-top:10px;display:flex">
+            style="margin-left:30px;margin-right: 30px; margin-top:10px;display:flex-start">
             <img class="himg" src="Vector.png">
             <div class="neighbour-name font-circuler-std text-wrap">
                 Ottawa-895, Ottawa
@@ -1915,7 +1915,7 @@
                                                 <div></div>
 
                                                 <div class=" frsf d-flex flex-column align-items-center res">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="text-f-4 text-nowrap">
                                                         3.1km
@@ -1938,7 +1938,7 @@
                                                 <div></div>
 
                                                 <div class="d-flex flex-column align-items-center">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
@@ -1965,7 +1965,7 @@
                                                 <div></div>
 
                                                 <div class="d-flex flex-column align-items-center">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="frfs text-f-4 text-nowrap">
                                                         3.1km
@@ -1988,7 +1988,7 @@
                                                 <div></div>
 
                                                 <div class="d-flex flex-column align-items-center">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='/full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
@@ -2014,7 +2014,7 @@
                     <section class="pr-md-3 rese " style="width: 48% ;margin-left:2rem">
                         <div class="d-flex  sectionHeader justify-content-between align-items-center  ">
                             <div class="d-flex align-items-center   color-charcoal ">
-                                <img src="/full-report-icons/bar-b.svg" width="40px" height="40px" />
+                                <img  src="full-report-icons/bar-b.svg" width="40px" height="40px" />
                                 <div class="fr smain-text">
                                     Restaurant, Bars and Cafe
                                 </div>
@@ -2043,7 +2043,7 @@
                                                 
 
                                                 <div class="d-flex flex-column align-items-center res">
-                                                    <img src='full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class=" frsf text-f-4 text-nowrap">
                                                         3.1km
@@ -2067,7 +2067,7 @@
                                                 <div></div>
 
                                                 <div class="d-flex flex-column align-items-center">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class=" frsf text-f-4 text-nowrap">
                                                         3.1km
@@ -2094,7 +2094,7 @@
                                                 <div></div>
 
                                                 <div class="d-flex flex-column align-items-center">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class= "loc" src='full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="frsf text-f-4 text-nowrap">
                                                         3.1km
@@ -2117,7 +2117,7 @@
                                                 <div></div>
 
                                                 <div class="frsf d-flex flex-column align-items-center ">
-                                                    <img src='/full-report-icons/location-g.svg' width="32px"
+                                                    <img class="loc" src='full-report-icons/location-g.svg' width="32px"
                                                         height="32px" />
                                                     <div class="text-f-4 text-nowrap">
                                                         3.1km
