--- a/new.html
+++ b/new.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <body>
-    <div style="margin-left:30px;margin-right: 30px; margin-top:10px;display:flex; border:1px solid">
+    <div style="width:100%; height:100%">
+    <div class="justify-content-between" style="margin-left:30px;margin-right: 30px; margin-top:10px;display:flex; border:1px solid">
         <img class="himg" src="Vector.png">
         <div class="neighbour-name font-circuler-std ">
             Ottawa-895, Ottawa
@@ -32,7 +33,8 @@
                     Phone:8786758788
                 </div>
         </div>
-        <img style="width:62px; height:62px" class="border rounded-circle heimg" crossorigin="anonymous" />
+        <img style="width:4rem; height:4rem ; border:1px solid red" class="border rounded-circle heimg" crossorigin="anonymous" />
+    </div>
     </div>
 </body>
 </head>
