--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </head>
 
 <body>
-    <div style="width:100%; height:100%">
+    <table style="width:100%; height:100%">
         <!--header-->
-        <div class="justify-content-between align-items-center "
+        <div
             style="margin-left:30px;margin-right: 30px; margin-top:10px;display:flex-start">
             <img class="himg" src="Vector.png">
             <div class="neighbour-name font-circuler-std text-wrap">
@@ -2191,7 +2191,7 @@
 
 
 
-        </div>
+    </table>
 </body>
 
 </html>
