--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@
                 <section class="  pr-md-3" style="margin-left:2.3em ; margin-right: 2em; margin-top:1.5em ;">
                     <div class="d-flex  sectionHeader justify-content-between align-items-center  ">
                         <div class="d-flex align-items-center   u-color-color-charcoal ">
-                            <img src="/full-report-icons/day_care-b.svg" width="45px" height="45px" class="ml-1" />
+                            <img src="/ width="45px" height="45px" class="ml-1" />
                             <div class="smain-text">Day Care</div>
                         </div>
 
