--- a/new.html
+++ b/new.html
@@ -41,10 +41,10 @@
 </head>
 
 <body>
-    <table style="width:100%; height:100%;border:1px solid red">
+    <table style="width:100%; height:100%;">
 
         <!--header-->
-        <tr style="margin-left:2rem;margin-right:2rem; margin-top:2rem;border:1px solid black">
+        <tr style="margin-left:2rem;margin-right:2rem; margin-top:2rem;">
             
             <td>
                 <img class="himg" src="Vector.png">
@@ -77,7 +77,7 @@
         </tr>
 
     </table>
-    <table style="width:100%; padding:10px;margin-top: 1rem;background-color:white;table-layout: fixed;">
+    <table style="width:100%; padding:10px;margin-top: 2rem;background-color:white;table-layout: fixed;">
         <tr style="padding:10px">
             <td style="background-color:blue; width: 38%;">
                 <img style="padding:.8rem" alt="Map Location" height="100%" width="100%"></img>
@@ -365,7 +365,7 @@
 
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed; ">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:1.5rem ">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/home.svg">
@@ -511,7 +511,7 @@
         </tr>
     </table>
 
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed; margin-top: 1.5rem;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/peoples.svg" width="30px">
@@ -701,12 +701,12 @@
             </td>
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:1rem ;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/hospital-b.svg">
             </td>
-            <td class="headcolor" style="font-size: 30px; padding-left:15px;">Healthcare</td>
+            <td class="headcolor" style="font-size: 25px; padding-left:15px;">Healthcare</td>
         </tr>
     </table>
 
@@ -895,12 +895,12 @@
             </td>
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top: 1.5rem;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/school-b.svg">
             </td>
-            <td style="font-size: 30px; padding-left: 1rem;">Schools</td>
+            <td class="headcolor" style="font-size: 25px; padding-left: 1rem">Schools</td>
         </tr>
     </table>
 
@@ -1143,13 +1143,13 @@
             </td>
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top: 1.5rem;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/day_care-b.svg">
             </td>
-            <td class="dmain-text" style="font-size: 30px; width: 30%;">Day Care</td>
-            <td class="dsubtext" style="font-size: 30px; width: 55%; text-align: right;">7 more</td>
+            <td class="dmain-text" style="font-size: 25px; width: 30%;">Day Care</td>
+            <td class="dsubtext" style="font-size: 20px; width: 55%; text-align: right;">7 more</td>
         </tr>
     </table>
 
@@ -1281,7 +1281,7 @@
             </td>
         </tr>
     </table>
-    <table>
+    <table style="margin-top:1.5rem">
         <tr>
             <td>
                 <table class="sectionHeader" style="width: 90%; table-layout: fixed;">
@@ -1289,8 +1289,8 @@
                         <td style="width: 6%;">
                             <img src="full-report-icons/grocery-b.svg">
                         </td>
-                        <td class="dmain-text" style="font-size: 30px; width: 45%; margin-left: 30px;">Groceries</td>
-                        <td class="dsubtext" style="font-size: 30px; width: 55%; text-align: right;">7 more</td>
+                        <td class="dmain-text" style="font-size: 25px; width: 45%; margin-left: 30px;">Groceries</td>
+                        <td class="dsubtext" style="font-size: 20px; width: 55%; text-align: right;">7 more</td>
                     </tr>
                 </table>
 
@@ -1400,8 +1400,8 @@
                         <td style="width: 6%;">
                             <img src="full-report-icons/grocery-b.svg">
                         </td>
-                        <td class="dmain-text" style="font-size: 30px; width: 45%; margin-left: 30px;">Groceries</td>
-                        <td class="dsubtext" style="font-size: 30px; width: 55%; text-align: right;">7 more</td>
+                        <td class="dmain-text" style="font-size: 25px; width: 45%; margin-left: 30px;">Groceries</td>
+                        <td class="dsubtext" style="font-size: 20px; width: 55%; text-align: right;">7 more</td>
                     </tr>
                 </table>
 
