--- a/new.html
+++ b/new.html
@@ -48,7 +48,7 @@
     <table style="width:100%; height:100%;">
 
         <!--header-->
-        <tr style="margin-left:2rem;margin-right:2rem; margin-top:2rem;">
+        <tr style="margin-left:2rem;margin-right:2rem; margin-top:3rem;">
             
             <td>
                 <img class="himg" src="Vector.png">
@@ -81,7 +81,7 @@
         </tr>
 
     </table>
-    <table style="width:100%; padding:10px;color:white;margin-top: 2rem;background-color:#2a9d8f;table-layout: fixed;">
+    <table style="width:100%; padding:10px;color:white;margin-top: 3rem;background-color:#2a9d8f;table-layout: fixed;">
         <tr style="padding:10px">
             <td style=" width: 38%;">
                 <img style="padding:.8rem;" alt="Map Location" height="100%" width="100%"></img>
@@ -90,7 +90,7 @@
                 <table style="width:100%; table-layout: fixed; padding:30px">
 
                     <tr>
-                        <td style="padding:12px">
+                        <td style="padding:12px; width:40%; padding-top: 2rem;">
                             <div class="d-flex">
                                 <img src="full-report-icons/school.svg" style="
                     filter:
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                         </td>
-                        <td style="padding:12px">
+                        <td style="padding:12px;padding-top: 2rem;">
                             <div class="d-flex">
                                 <img src="full-report-icons/school.svg" style="
                     filter:
@@ -369,7 +369,7 @@
 
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:1.5rem ">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:2rem ">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/home.svg">
@@ -515,7 +515,7 @@
         </tr>
     </table>
 
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed; margin-top: 1.5rem;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed; margin-top: 2rem;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/peoples.svg" width="30px">
@@ -646,7 +646,7 @@
             <td class="border-right" style="height:8rem" width="25%">
                 <table style="margin-left:1rem ;margin-top:-2rem" >
                     <tr>
-                        <td class="sdheading">Method of Travel to work</p>
+                        <td class="sdheading" style=" width:55%">Method of Travel to work</p>
                     </tr>
                     <tr>
 
@@ -705,7 +705,7 @@
             </td>
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:1rem ;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top:2rem ;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/hospital-b.svg">
@@ -716,7 +716,7 @@
 
     <table style="width: 100%; table-layout: fixed;">
         <tr>
-            <td style="width: 20%; padding-right:10rem">
+            <td style="width: 21%; padding-right:10rem;">
                 <div>
                     <table style="width: 100%; table-layout: fixed;">
                         <tr>
@@ -777,7 +777,7 @@
                     </div>
                 </div>
             </td>
-            <td style="width: 20%;padding-right:10rem; ">
+            <td style="width: 21%;padding-right:5rem; padding-left:5rem;">
                 <div>
                     <table style="width: 100%; table-layout: fixed;">
                         <tr>
@@ -837,7 +837,7 @@
                     </div>
                 </div>
             </td>
-            <td style="width: 20%; padding-left:10rem">
+            <td style="width: 21%; padding-left:10rem;">
                 <div>
                     <table style="width: 100%; table-layout: fixed;">
                         <tr>
@@ -899,7 +899,7 @@
             </td>
         </tr>
     </table>
-    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top: 5rem;">
+    <table class="sectionHeader" style="width: 100%; table-layout: fixed;margin-top: 7rem;">
         <tr>
             <td style="width: 3%;">
                 <img src="full-report-icons/school-b.svg">
